--- a/php/css/style.css
+++ b/php/css/style.css
@@ -752,8 +752,9 @@ Status API Training Shop Blog About
 			color: #777;
 			margin: 1.5em 0 0 0;
 			padding: 1.5em 0 0 0;
+			text-align: left;
 			font-style: normal;
-			font-size: 1.42em;
+			font-size: 1.43em;
 		}
 
 /* Form */
