No. 58 - Home page title color modified

--- a/php/css/style.css
+++ b/php/css/style.css
@@ -1829,7 +1829,7 @@ Status API Training Shop Blog About
 
 		#banner p {
 			font-size: 1.25em;
-			color: #e67300;
+			color: #ff8000;
 			margin-bottom: 1.75em;
 		}
 
