--- a/php/css/style.css
+++ b/php/css/style.css
@@ -970,6 +970,9 @@ Status API Training Shop Blog About
 		margin: 0em 0 2em 0;
 		padding: 3em;
 	}
+	.box .help{
+		font-size: 1.1em;
+	}
 
 		.box > :last-child {
 			margin-bottom: 0;
@@ -2198,12 +2201,16 @@ Status API Training Shop Blog About
 	border-left: 1px dotted #AAA;
 }
 .clr1 {
-			text-align: center;
-			margin-top: 0.5em;
-			vertical-align: bottom;
+	text-align: center;
+	margin-top: 0.5em;
+	vertical-align: bottom;
 }
 .clearfix {
 	min-height: 15em;
 	width:100%vw;
 	font-weight:bold;
 }
+.clr1{
+  color: #3372df !important;
+}
+
