--- a/html/css/style.css
+++ b/html/css/style.css
@@ -1829,15 +1829,17 @@ Status API Training Shop Blog About
 /*
 			color:#c17758;
 */
-			color: #ff8000;
+			color: #FF6F00;
 			margin: 0 0 0em 0;
 			padding: 0;
+			text-shadow: 1px 2px #181823;
 		}
 
 		#banner p {
 			font-size: 1.25em;
-			color: #ff8000;
+			color: #FF6F00;
 			margin-bottom: 1.75em;
+			text-shadow: 0px 1px #181823;
 		}
 
 		#banner input[type="submit"],
